--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,17 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ruby on Rails
+*.rbc
+.rspec
+/log
+/tmp
+/db/*.sqlite3
+/db/*.sqlite3-journal
+/public/system
+/coverage/
+/spec/tmp
+
+# RVM
+.rvmrc
